# gbda-pico

./: .gitignore  CMakeLists.txt  gbda-pico.c  gbda-pico.h  notes.txt
gbda/: CMakeLists.txt  bus.c  bus.h  cartridge.c  cartridge.h  gb.h  interrupt.c  mbc.c  ppu.c  serial.c  serial.h  sm83.c  sm83.h  timer.c
lib/: CMakeLists.txt
lib/ili9225/: CMakeLists.txt  ili9225.c  ili9225.h
lib/ili9341/: CMakeLists.txt  ili9341.c  ili9341.h
